pkg/gox/testdata/errors/empty_key.gox
package demo

func View() any {
	return <p Key={}>Broken</p>
}
